package BodyDataClient;

message KinectData {
   optional int32 ID = 1;
   optional Vector3 positionTracked = 2;
   optional bool isTrackingBody = 3 [default = false];
   repeated string trackingGestureNames = 4;
   optional string trackedGesture = 5;
   optional Vector3 positionGestureTracked = 6;
}

message Vector3 {
	optional float x = 1;
	optional float y = 2;
	optional float z = 3;
}
